@@ -1,0 +1,97 @@
+/*
+ * Copyright (c) 2007-2015 Concurrent, Inc. All Rights Reserved.
+ *
+ * Project and contact information: http://www.cascading.org/
+ *
+ * This file is part of the Cascading project.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package cascading.jdbc.db;
+
+import java.io.IOException;
+import java.sql.SQLException;
+
+import org.apache.hadoop.io.LongWritable;
+import org.apache.hadoop.mapred.JobConf;
+import org.apache.hadoop.mapred.RecordReader;
+
+/**
+ * Derby specific DBInputFormat subclass.
+ */
+public class DerbyDBInputFormat extends DBInputFormat<DBWritable>
+  {
+
+  @Override
+  protected RecordReader<LongWritable, DBWritable> getRecordReaderInternal( cascading.jdbc.db.DBInputFormat.DBInputSplit split, Class inputClass, JobConf job ) throws SQLException, IOException
+    {
+    return new DerbyDBRecordReader( split, inputClass, job );
+    }
+
+  class DerbyDBRecordReader extends DBInputFormat.DBRecordReader
+    {
+    protected DerbyDBRecordReader( cascading.jdbc.db.DBInputFormat.DBInputSplit split, Class inputClass, JobConf job ) throws SQLException, IOException
+      {
+      super( split, inputClass, job );
+      }
+
+    /** Returns the query for selecting the records from an Oracle DB. */
+    protected String getSelectQuery()
+      {
+      StringBuilder query = new StringBuilder();
+
+      // derby-specific codepath
+      if( dbConf.getInputQuery() == null )
+        {
+        query.append( "SELECT " );
+
+        for( int i = 0; i < fieldNames.length; i++ )
+          {
+          query.append( fieldNames[ i ] );
+          if( i != fieldNames.length - 1 )
+            {
+            query.append( ", " );
+            }
+          }
+
+        query.append( " FROM " ).append( tableName );
+        if( conditions != null && conditions.length() > 0 )
+          query.append( " WHERE " ).append( conditions );
+
+        String orderBy = dbConf.getInputOrderBy();
+        if( orderBy != null && orderBy.length() > 0 )
+          query.append( " ORDER BY " ).append( orderBy );
+        }
+      else
+        {
+        //PREBUILT QUERY
+        query.append( dbConf.getInputQuery() );
+        }
+      try
+        {
+        if( split.getLength() > 0 && split.getStart() >= 0 )
+          {
+          query.append( " OFFSET " ).append( split.getStart() )
+               .append( " ROWS FETCH NEXT " ).append( split.getEnd() - split.getStart() ).append( " ROWS ONLY" );
+          }
+        }
+      catch( IOException ex )
+        {
+        // ignore, will not throw.
+        }
+
+      return query.toString();
+      }
+    }
+  }
