@@ -23,7 +23,7 @@ cascading.bind.provider.names=derby
 cascading.bind.provider.derby.platforms=hadoop,hadoop2-mr1
 
 # factory
-cascading.bind.provider.derby.factory.classname=cascading.jdbc.JDBCFactory
+cascading.bind.provider.derby.factory.classname=cascading.jdbc.DerbyFactory
 
 # the protocol is jdbc
 cascading.bind.provider.derby.protocol.names=jdbc
